--- a/package.json
+++ b/package.json
@@ -1,30 +1,49 @@
 {
   "name": "simple-browser-storage",
-  "version": "0.0.6",
   "description": "Module wich gives you opportunity storing your JSON data in localStorage or Cookies (dependent on what is accessible for current browser)",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.1.0",
+  "main": "dist/simple-browser-storage.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/VoloshinS/simpleStorage"
   },
-  "keywords": [
-    "localStorage",
-    "Cookies",
-    "Cookie",
-    "getState",
-    "setState"
-  ],
-  "author": "VoloshinS",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/VoloshinS/simpleStorage/issues"
+  "scripts": {
+    "build": "npm run clean && npm run build:dev && npm run build:prd",
+    "build:dev": "webpack src/main.js dist/simple-browser-storage.js --config webpack.config.dev.js",
+    "build:prd": "webpack src/main.js dist/simple-browser-storage.min.js --config webpack.config.prd.js",
+    "clean": "rimraf dist build",
+    "lint": "eslint .",
+    "test": "karma start --single-run --no-auto-watch karma.config.js"
   },
-  "homepage": "https://github.com/VoloshinS/simpleStorage",
-  "dependencies": {
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6"
-  }
+  "keywords": [
+    "cookie",
+    "localstorage",
+    "browser storage"
+  ],
+  "author": "Voloshin Sergey http://voloshins.js.org/",
+  "license": "MIT",
+  "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
+    "eslint": "^1.6.0",
+    "eslint-config-airbnb": "^0.1.0",
+    "isparta": "^3.1.0",
+    "isparta-loader": "^1.0.0",
+    "istanbul": "^0.3.22",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.1.1",
+    "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.20",
+    "karma-webpack": "^1.7.0",
+    "phantomjs": "^1.9.18",
+    "rimraf": "^2.4.3",
+    "webpack": "^1.12.2"
+  },
+  "dependencies": {}
 }
